# mini_sd_trainer

./: LICENSE  pyproject.toml
drawdream/: gui.py  lora.py
examples/: train_unconditional.py
sd-scripts/: train_network.py
starter/: generative_task.py  index.py  lora_adapters.py  reademe.md  train.py
