[project]
name = "mini-sd-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "diffusers[torch]>=0.32.2",
    "gradio>=5.17.1",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.3",
    "matplotlib>=3.10.0",
    "pypdf>=5.3.0",
    "safetensors>=0.5.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.3",
    "xformers>=0.0.29.post3",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126" },
]
torchvision = [
  { index = "pytorch-cu126" },
]
